# approvals

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  build.sh
approvals/: tests::test_approve_approved.txt
src/: get_method_name.rs  lib.rs
src/approvals_tests/: Cargo.toml  lib.rs
src/approvals_tests/approvals/: test_approve_simple_expected.txt
src/approvals_tests/src/: lib.rs
src/file_system/: mod.rs  tests.rs
src/method_name/: error.rs  mod.rs  tests.rs
src/tests/: contents_approved.txt  mod.rs
