[package]
name = "approvals"
version = "0.0.5"
authors = ["alekspak <alekspak@icloud.com>"]

description = "A simple library allowing to compare strings in unit-tests. Currently in development stage and not usable."

homepage = "https://github.com/aleksandrpak/approvals"
documentation = "https://github.com/aleksandrpak/approvals"
repository = "https://github.com/aleksandrpak/approvals"

license = "MIT"

exclude = [
    "src/approvals_test/*",
    "build.sh",
]

[dependencies]
backtrace = "0.1"
